# computer-vision

./: .gitignore  README.md  main.py  pyproject.toml
configs/: simple_cnn_classification.yaml
datamodules/: __init__.py  datamodule_factory.py  geotif_datamodule.py  image_folder_datamodule.py
models/: __init__.py  base.py  cnns.py  model_factory.py
scripts/: train_model.py
src/models/: cnns.py
src/processors/: __init__.py  data_loader.py
src/runners/: runner.py
